Removing remaining references to PermGen