@@ -744,7 +744,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.18.1</version>
           <configuration>
-            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+            <argLine>-Xms512m -Xmx1024m</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -985,7 +985,7 @@
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>-XX:MaxPermSize=128m ${jacoco.agent.it.arg}</argLine>
+          <argLine>${jacoco.agent.it.arg}</argLine>
         </configuration>
         <executions>
           <execution>
